Home Assistant/ha-gatewayapi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ha-gatewayapi
  namespace: home-assistant
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homeassistant-clusterip
          kind: Service
          port: 8123
